<resources>
    <string name="app_name">Sashimisake</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menuMenu">Меню</string>
    <string name="menuKitchen">Кухня</string>
    <string name="menuStatus">Статус заказов</string>
    <string name="menuControl">Управление</string>
    <string name="menuCommunicate">Communicate</string>
    <string name="menuShare">Share</string>
    <string name="menuSend">Send</string>
    <string name="orderReady">Заказ готов</string>
    <string name="ordersReady">Готовые заказы</string>
    <string name="ordersInWork">Заказы в работе</string>
    <string name="addCategory">Добавить категорию</string>
    <string name="addDish">Добавить блюдо</string>
    <string name="stats">Статистика</string>
    <string name="time">time</string>
    <string name="details">details</string>
</resources>
